--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,30 @@
 {
   "name": "bootstrap-css-only",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "keywords": [
-        "twitter",
-        "bootstrap",
-        "twitter-bootstrap",
-        "css"
-    ],
-    "main": [
-      "css/bootstrap.css"
-    ],
-    "homepage": "http://getbootstrap.com/",
-    "author": {
-        "name": "Twitter Inc."
-    },
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/fyockm/bootstrap-css-only.git"
-    }
+    "twitter",
+    "bootstrap",
+    "twitter-bootstrap",
+    "css"
+  ],
+  "main": [
+    "css/bootstrap.css",
+    "fonts/glyphicons-halflings-regular.eot",
+    "fonts/glyphicons-halflings-regular.svg",
+    "fonts/glyphicons-halflings-regular.ttf",
+    "fonts/glyphicons-halflings-regular.woff"
+  ],
+  "homepage": "http://getbootstrap.com/",
+  "author": {
+    "name": "Twitter Inc."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/fyockm/bootstrap-css-only.git"
+  },
+  "gitHead": "d188941913d98e32cd46ec340279ec2bc296d670",
+  "readme": "# Bootstrap CSS only\n\nThis is a Bower component for [Bootstrap](http://getbootstrap.com/) CSS and font libraries only. No javascript, and more importantly NO bower depenedency on jQuery. Perfect companion for [Angular-UI Bootstrap](https://github.com/angular-ui/bootstrap-bower).\n\nWith 3.0.1 and above, the glyphicons are included as well.\n\n## Installation:\n\n`bower install bootstrap-css-only`\n\n### Previous Bootstrap versions also available:\nYou can request info for a specific version with 'bower info bootstrap-css-only#<version>'\n```\nbower install bootstrap-css-only#2.3.2\nbower install bootstrap-css-only#3.0.0\n...\n```\n",
+  "readmeFilename": "README.md",
+  "_id": "bootstrap-css-only@3.3.0",
+  "description": "This is a Bower component for [Bootstrap](http://getbootstrap.com/) CSS and font libraries only. No javascript, and more importantly NO bower depenedency on jQuery. Perfect companion for [Angular-UI Bootstrap](https://github.com/angular-ui/bootstrap-bower)."
 }
