Update to Bootstrap v4.0.0-beta

--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,7 @@
     "css"
   ],
   "main": [
-    "css/bootstrap.css",
-    "fonts/glyphicons-halflings-regular.eot",
-    "fonts/glyphicons-halflings-regular.svg",
-    "fonts/glyphicons-halflings-regular.ttf",
-    "fonts/glyphicons-halflings-regular.woff",
-    "fonts/glyphicons-halflings-regular.woff2"
+    "css/bootstrap.css"
   ],
   "homepage": "https://getbootstrap.com/",
   "license": "MIT",
